<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DEMO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_title_phone">手机归属地查询</string>
    <string name="label_phone">手机号码：</string>
    <string name="label_phone_hint">请输入手机号码</string>
    <string name="label_button">查询</string>
    <string name="warning_phone_tooshort">您输入的手机号码（段）有误！</string>
    <string name="label_popup_copy">复制</string>
    <string name="label_popup_cut">剪切</string>
    <string name="label_popup_delete">删除</string>
    <string name="label_popup_more">更多</string>

</resources>
